Fixed z-index bug

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
 				position: fixed;
 				left: 0;
 				top: 0;
+				z-index: 3000;
 			}
 
 			#qliq_animated_widget_content {
